# svrctlrs

./: .dockerignore  .env.example  .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ASSESSMENT_AND_RECOMMENDATION.md  BUILD_FIXES.md  CLAUDE.md  COMPLETE_REFACTORING.md  Cargo.toml  DATABASE_AS_SOURCE_OF_TRUTH.md  DATABASE_IMPLEMENTATION_STATUS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_PATH_UPDATED.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_REFERENCE.md  DEVELOPMENT_STATUS.md  DOCKER_PLUGIN_SETUP.md  DOCKER_VM_SETUP.md  Dioxus.toml  Dockerfile  FEATURE_AUDIT.md  FEATURE_WEB_TERMINAL.md  FIX_MIGRATION.md  FIX_NOW.md  HTMX_CSS_INTEGRATION.md  HTMX_MIGRATION_COMPLETE.md  HTMX_MIGRATION_PLAN.md  IMMEDIATE_PRIORITIES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  MIGRATE_NOW.sh  MISSING_FUNCTIONALITY.md  PHASE2_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  QUERY_IMPLEMENTATION_SUMMARY.md  (+21 more)
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  docker-publish-develop.yml  docker-publish-main.yml  docker-test-pull.yml  release.yml  test.yml
assets/: main.css  styles.css
config/: docker-vm.toml  example.toml
core/: Cargo.toml
core/src/: error.rs  executor.rs  lib.rs  notifications.rs  plugin.rs  remote.rs  types.rs
database/: Cargo.toml
database/migrations/: 000_initial_schema.sql  001_create_core_tables.sql  001_extend_servers.sql  002_create_plugins.sql  003_create_notification_backends.sql  004_create_tasks.sql  005_extend_task_history.sql  006_create_settings.sql  007_add_server_id_to_tasks.sql  008_cleanup_localhost_server.sql  009_add_ssh_plugin.sql  010_rename_plugin_to_feature.sql  011_complete_restructure.sql  012_add_parameter_schema.sql  013_add_rendered_command.sql  014_add_terminal_profiles.sql  015_job_catalog_and_workflow.sql
database/src/: lib.rs  notification_service.rs
database/src/models/: credential.rs  job_catalog.rs  job_run.rs  job_schedule.rs  job_template.rs  job_type.rs  mod.rs  notification.rs  plugin.rs  server.rs  setting.rs  tag.rs  task.rs  terminal_profile.rs
database/src/queries/: credentials.rs  job_catalog.rs  job_runs.rs  job_schedules.rs  job_templates.rs  job_types.rs  mod.rs  mod_old.rs  notifications.rs  notifications_old.rs  plugins.rs  plugins_old.rs  servers.rs  settings.rs  tags.rs  tasks.rs  terminal_profiles.rs
docs/: API.md  ARCHITECTURE.md  CI-CD.md  COMMAND_TEMPLATES.md  JOBS.md  NOTIFICATIONS.md  PROGRESS.md  README.md  TERMINAL_IMPLEMENTATION_PLAN.md  WEBSOCKET_ARCHITECTURE_ANALYSIS.md  WORKFLOW_OPTIMIZATION_PLAN.md  status.md
docs-archived/: README.md
docs-archived/root-level/: ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_COMPLIANCE_SUMMARY.md  CHANGELOG.md  CLAUDE.archive.md  COMPREHENSIVE_ASSESSMENT_2024-11-26.md  CONSOLIDATED_ACTION_PLAN.md  CURRENT_STATE_ASSESSMENT.md  DATABASE_QUERIES.md  DOCKER_MONITORING.md  (+7 more)
plugins/: README.md
plugins/docker/: Cargo.toml
plugins/docker/src/: analysis.rs  cleanup.rs  health.rs  lib.rs
plugins/health/: Cargo.toml
plugins/health/src/: lib.rs
plugins/speedtest/: Cargo.toml
plugins/speedtest/src/: lib.rs
plugins/weather/: Cargo.toml
plugins/weather/src/: lib.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
scripts/: fix-plugin-task-ids.sh  fix-task-commands.sh  setup-docker-gid.sh
server/: Cargo.toml
server/src/: config.rs  executor.rs  filters.rs  main.rs  routes.rs  ssh.rs  state.rs  templates.rs  ui_routes.rs
server/src/features/: docker.rs  health.rs  mod.rs  updates.rs
server/src/routes/: api.rs  job_runs_ws.rs  notifications.rs  plugins.rs  plugins_old.rs  servers.rs  terminal.rs  terminal_pty.rs  webhooks.rs
server/src/routes/api/: catalog.rs  credentials.rs  job_runs.rs  job_schedules.rs  job_templates.rs  job_types.rs  mod.rs  notifications.rs  servers.rs  settings.rs  tags.rs
server/src/routes/ui/: auth.rs  credentials.rs  dashboard.rs  debug.rs  job_runs.rs  job_schedules.rs  job_templates.rs  job_types.rs  mod.rs  notifications.rs  plugins.rs  plugins_old.rs  servers.rs  settings.rs  tags.rs  tasks.rs  wizard.rs
server/src/ui/: api.rs  fullstack.rs  layout.rs  mod.rs  routes.rs  server_fns.rs  theme.rs
server/src/ui/components/: badge.rs  mod.rs  status_card.rs
server/src/ui/pages/: dashboard.rs  mod.rs  not_found.rs  plugins.rs  servers.rs  settings.rs  tasks.rs
server/static/css/: styles-technical.css  styles.css
server/static/js/: job-runs-ws.js  terminal.js
server/templates/: base.html  base_updated.html
server/templates/components/: command_template_form.html  command_template_list.html  command_template_parameters.html  command_template_test.html  command_template_test_result.html  credential_form.html  credential_list.html  grouped_schedules.html  job_run_detail.html  job_run_list.html  job_schedule_form.html  job_schedule_list.html  job_template_form.html  job_template_list.html  job_template_step_form.html  job_template_steps.html  job_type_form.html  job_type_list.html  job_type_view.html  notification_channel_form.html  notification_channel_list.html  notification_form.html  notification_list.html  notification_policy_form.html  notification_policy_list.html  plugin_config_form.html  plugin_list.html  server_capabilities.html  server_form.html  server_form_updated.html  server_job_result_detail.html  server_job_results.html  server_list.html  server_list_updated.html  settings_list.html  tag_form.html  tag_list.html  task_form.html  task_list.html  terminal_modal.html
server/templates/components/wizard/: catalog_grid.html  configure_step.html  notify_step.html  review_step.html  schedule_step.html  servers_step.html  success.html
server/templates/pages/: 404.html  credentials.html  dashboard.html  dashboard_updated.html  debug.html  job_run_detail.html  job_runs.html  job_schedules.html  job_templates.html  job_types.html  login.html  notification_channels.html  notification_log.html  notification_policies.html  notifications.html  plugins.html  servers.html  settings.html  settings_general.html  tags.html  tasks.html  terminal.html  wizard.html
(+26 files in other folders)
