[workspace]
resolver = "2"
members = [
    "core",
    "server",
    "scheduler",
    "database",
    "plugins/docker",
    "plugins/updates",
    "plugins/health",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsprague84/svrctlrs"
authors = ["Josh Sprague"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# Dioxus fullstack framework
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-server = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# Error handling
anyhow = "1"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SSH for remote execution
async-ssh2-tokio = "0.8"

# Environment
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal workspace crates
svrctlrs-core = { path = "core" }
svrctlrs-scheduler = { path = "scheduler" }
svrctlrs-database = { path = "database" }
svrctlrs-plugin-docker = { path = "plugins/docker" }
svrctlrs-plugin-updates = { path = "plugins/updates" }
svrctlrs-plugin-health = { path = "plugins/health" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
