[workspace]
resolver = "2"
members = [
    "core",
    "server",
    "scheduler",
    "database",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsprague84/svrctlrs"
authors = ["Josh Sprague"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "fs"] }

# Removed: Dioxus (migrated to HTMX + Askama)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }

# Error handling
anyhow = "1"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SSH for remote execution
async-ssh2-tokio = "0.8"

# WebSocket support
futures-util = "0.3"

# Environment
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal workspace crates
svrctlrs-core = { path = "core" }
svrctlrs-scheduler = { path = "scheduler" }
svrctlrs-database = { path = "database" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
