[package]
name = "svrctlrs-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Cron
cron = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Core
svrctlrs-core = { workspace = true }
