[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "svrctl"
path = "src/bin/svrctl.rs"

[dependencies]
# Internal crates (server-only - contain tokio, sqlx, etc.)
svrctlrs-core = { workspace = true, optional = true }
svrctlrs-scheduler = { workspace = true, optional = true }
svrctlrs-database = { workspace = true, optional = true }

# Core plugins (default)
svrctlrs-plugin-docker = { workspace = true, optional = true }
svrctlrs-plugin-updates = { workspace = true, optional = true }
svrctlrs-plugin-health = { workspace = true, optional = true }

# Add-on plugins (optional, not default)
svrctlrs-plugin-weather = { workspace = true, optional = true }
svrctlrs-plugin-speedtest = { workspace = true, optional = true }

# Async (optional for server)
tokio = { workspace = true, optional = true }

# Web framework (optional for server)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Dioxus UI (fullstack) - Override workspace to ensure fullstack feature is enabled
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-router = "0.7"
dioxus-fullstack = { version = "0.7", optional = true }
dioxus-ssr = { version = "0.7", optional = true }
dioxus-server = { version = "0.7", optional = true }
dioxus-cli-config = { version = "0.7", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (server-only)
anyhow = { workspace = true, optional = true }

# Logging (server-only)
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Environment (server-only)
dotenvy = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }

# CLI (server-only)
clap = { workspace = true, optional = true }

# HTTP client (server-only)
reqwest = { workspace = true, optional = true }

# Date/time (server-only)
chrono = { workspace = true, optional = true }

[features]
# Default: Core plugins only (server/web features auto-enabled by dx CLI)
default = ["plugin-docker", "plugin-updates", "plugin-health"]

# Dioxus target features (conditional compilation)
server = [
    "dioxus/server",
    # Dioxus server-side dependencies
    "dep:dioxus-fullstack",
    "dep:dioxus-ssr",
    "dep:dioxus-server",
    "dep:dioxus-cli-config",
    # Internal crates (server-only)
    "dep:svrctlrs-core",
    "dep:svrctlrs-scheduler",
    "dep:svrctlrs-database",
    # Server dependencies
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:toml",
    "dep:clap",
    "dep:reqwest",
    "dep:chrono"
]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

# Core plugins (default enabled)
plugin-docker = ["dep:svrctlrs-plugin-docker"]
plugin-updates = ["dep:svrctlrs-plugin-updates"]
plugin-health = ["dep:svrctlrs-plugin-health"]

# Add-on plugins (optional, disabled by default)
plugin-weather = ["dep:svrctlrs-plugin-weather"]
plugin-speedtest = ["dep:svrctlrs-plugin-speedtest"]

# Convenience: Enable all plugins (core + add-ons)
all-plugins = ["plugin-docker", "plugin-updates", "plugin-health", "plugin-weather", "plugin-speedtest"]
