[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "svrctl"
path = "src/bin/svrctl.rs"

[dependencies]
# Internal crates (server-only - contain tokio, sqlx, etc.)
svrctlrs-core = { workspace = true, optional = true }
svrctlrs-scheduler = { workspace = true, optional = true }
svrctlrs-database = { workspace = true, optional = true }

# Core plugins (default)
svrctlrs-plugin-docker = { workspace = true, optional = true }
svrctlrs-plugin-updates = { workspace = true, optional = true }
svrctlrs-plugin-health = { workspace = true, optional = true }

# Add-on plugins (optional, not default)
svrctlrs-plugin-weather = { workspace = true, optional = true }
svrctlrs-plugin-speedtest = { workspace = true, optional = true }

# Async (optional for server)
tokio = { workspace = true, optional = true }

# Web framework (optional for server)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Templating (HTMX + Askama)
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }

# Session management for auth
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.13", features = ["sqlite"], optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (server-only)
anyhow = { workspace = true, optional = true }

# Logging (server-only, optional for WASM compatibility)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Environment (server-only)
dotenvy = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }

# CLI (server-only)
clap = { workspace = true, optional = true }

# HTTP client (server-only)
reqwest = { workspace = true, optional = true }

# SSH client (server-only)
async-ssh2-tokio = { workspace = true, optional = true }

# Date/time (server-only)
chrono = { workspace = true, optional = true }
cron = { workspace = true, optional = true }

[features]
# Default: Core plugins + server feature
default = ["server", "plugin-docker", "plugin-updates", "plugin-health"]

# Server feature (default for binary)
server = [
    # Internal crates (server-only)
    "dep:svrctlrs-core",
    "dep:svrctlrs-scheduler",
    "dep:svrctlrs-database",
    # Server dependencies
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-sessions-sqlx-store",
    "dep:anyhow",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:toml",
    "dep:clap",
    "dep:reqwest",
    "dep:async-ssh2-tokio",
    "dep:chrono",
    "dep:cron"
]

# Core plugins (default enabled)
plugin-docker = ["dep:svrctlrs-plugin-docker"]
plugin-updates = ["dep:svrctlrs-plugin-updates"]
plugin-health = ["dep:svrctlrs-plugin-health"]

# Add-on plugins (optional, disabled by default)
plugin-weather = ["dep:svrctlrs-plugin-weather"]
plugin-speedtest = ["dep:svrctlrs-plugin-speedtest"]

# Convenience: Enable all plugins (core + add-ons)
all-plugins = ["plugin-docker", "plugin-updates", "plugin-health", "plugin-weather", "plugin-speedtest"]
