[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "svrctl"
path = "src/bin/svrctl.rs"

[dependencies]
# Internal crates (server-only - contain tokio, sqlx, etc.)
svrctlrs-core = { workspace = true, optional = true }
svrctlrs-scheduler = { workspace = true, optional = true }
svrctlrs-database = { workspace = true, optional = true }

# Async (optional for server)
tokio = { workspace = true, optional = true }

# Web framework (optional for server)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Templating (HTMX + Askama)
askama = { version = "0.14", features = ["serde_json"] }
askama_web = { version = "0.14", features = ["axum-0.8"] }

# Session management for auth
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.13", features = ["sqlite"], optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (server-only)
anyhow = { workspace = true, optional = true }

# Logging (server-only, optional for WASM compatibility)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Environment (server-only)
dotenvy = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }

# CLI (server-only)
clap = { workspace = true, optional = true }

# HTTP client (server-only)
reqwest = { workspace = true, optional = true }

# SSH client (server-only)
async-ssh2-tokio = { workspace = true, optional = true }
# SSH with PTY support for interactive sessions
russh = { workspace = true, optional = true }
russh-keys = { workspace = true, optional = true }

# Date/time (server-only)
chrono = { workspace = true, optional = true }
cron = { workspace = true, optional = true }

# Security (server-only)
subtle = { version = "2.5", optional = true }

# Utilities (server-only)
which = { version = "6.0", optional = true }
regex = "1.12.2"
axum-extra = { version = "0.12.2", features = ["form"] }

# WebSocket support
futures-util = { workspace = true, optional = true }
tempfile = "3.23.0"

[features]
# Default: Server feature
default = ["server"]

# Server feature (default for binary)
server = [
    # Internal crates (server-only)
    "dep:svrctlrs-core",
    "dep:svrctlrs-scheduler",
    "dep:svrctlrs-database",
    # Server dependencies
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-sessions-sqlx-store",
    "dep:anyhow",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:toml",
    "dep:clap",
    "dep:reqwest",
    "dep:async-ssh2-tokio",
    "dep:russh",
    "dep:russh-keys",
    "dep:chrono",
    "dep:cron",
    "dep:subtle",
    "dep:which",
    "dep:futures-util"
]
