[package]
name = "svrctlrs-plugin-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core
svrctlrs-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Docker API
bollard = "0.18"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
