[package]
name = "svrctlrs-plugin-health"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core
svrctlrs-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# System info
sysinfo = "0.30"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
