[package]
name = "svrctlrs-plugin-weather"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal
svrctlrs-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
